Add GitHub Actions CI pipeline

--- a/sightwise/src/app/composants/acceuil-page/acceuil-page.component.html
+++ b/sightwise/src/app/composants/acceuil-page/acceuil-page.component.html
@@ -1,3 +1,4 @@
+<script src="acceuil-page.component.ts"></script>
 <header class="header slider-fade">
     <div class="owl-carousel owl-theme">
         <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
@@ -7,9 +8,9 @@
                     <div class="row">
                         <div class="col-md-10 offset-md-1">
 
-                            <h4>JAWLATY & Meillers Attractions</h4>
-                            <h1>Profitez des Experience</h1>
-                            <div class="butn-light mt-30 mb-30"> <a href="#" data-scroll-nav="1"><span>chercher Attractions</span></a> </div>
+                            <h4>JasmineTrip & Premier Destinations</h4>
+                            <h1>Experience Exceptional Journeys</h1>
+                            <div class="butn-light mt-30 mb-30"> <a href="#" data-scroll-nav="1"><span>Explore Attractions</span></a> </div>
                         </div>
                     </div>
                 </div>
@@ -21,9 +22,9 @@
                     <div class="row">
                         <div class="col-md-10 offset-md-1">
 
-                            <h4> Endroits de confort & plaisir</h4>
-                            <h1>La base parfaite pour vous</h1>
-                            <div class="butn-light mt-30 mb-30"> <a href="#" data-scroll-nav="1"><span>chercher Attractions</span></a> </div>
+                            <h4> Comfort & Elegance Await</h4>
+                            <h1>Your Perfect Travel Companion</h1>
+                            <div class="butn-light mt-30 mb-30"> <a href="#" data-scroll-nav="1"><span>Discover Attractions</span></a> </div>
                         </div>
                     </div>
                 </div>
@@ -35,14 +36,28 @@
                     <div class="row">
                         <div class="col-md-10 offset-md-1">
 
-                            <h4>L’expérience ultime des attractions</h4>
-                            <h1>Profitez des meilleurs moments de la vie</h1>
-                            <div class="butn-light mt-30 mb-30"> <a href="#" data-scroll-nav="1"><span>Decouvrez Attractions</span></a> </div>
+                            <h4>Unforgettable Moments</h4>
+                            <h1>Indulge in Life’s Finest Experiences</h1>
+                            <div class="butn-light mt-30 mb-30"> <a href="#" data-scroll-nav="1"><span>Find Your Adventure</span></a> </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+      <div class="text-center item bg-img" data-overlay-dark="3" data-background="assets/img/slider/3A.jpg">
+        <div class="v-middle caption">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-10 offset-md-1">
+
+                <h4>Exclusive Travel Guide</h4>
+                <h1>Elevate Your Journey with JasmineTrip</h1>
+                <div class="butn-light mt-30 mb-30"> <a href="#" data-scroll-nav="1"><span>See Attractions</span></a> </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- slider reservation -->
     <div class="reservation">
@@ -130,7 +145,7 @@
                         <img src="http://localhost:8089/CATEGORY-SERVICE/attractions/files/{{p?.photos[0]}}"  class="tail" alt=""title="Click to see more">
                     </a>
                 </td>
-                
+
                 <td>{{p.name}}</td>
                 <td>{{p.location}}</td>
                 <td>
@@ -139,7 +154,7 @@
                       </button>
                   </td>
               </tr>
-          
+
             </tbody>
           </table>
         </div>
