--- a/sightwise/src/app/composants/acceuil-page/acceuil-page.component.css
+++ b/sightwise/src/app/composants/acceuil-page/acceuil-page.component.css
@@ -9,7 +9,7 @@
     padding: 2px;
     font-size: 15px;
     line-height: 28px;
-   
+
     color: #222;
 }
 
@@ -32,7 +32,7 @@
     transition: all 0.3s ease-out;
     letter-spacing: 3px;
     text-transform: uppercase;
-     margin-left: 44px; 
+     margin-left: 44px;
 }
 
 img.tail{
@@ -53,7 +53,23 @@ img.tail{
     color: #000000;
     -webkit-appearance: none;
     -moz-appearance: none;
-   
+
 }
 
+.caption h1,
+.caption h4,
+.nav-link,
+.navbar-brand {
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7); /* dark outline */
+}
+.nav-link {
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 5px 10px;
+  border-radius: 8px;
+  color: #000 !important;
+  font-weight: bold;
+}
 
+.logo img {
+  filter: drop-shadow(2px 2px 5px rgba(0,0,0,0.6));
+}
