--- a/sightwise/src/app/composants/attraction-acceuil/attraction-acceuil.component.html
+++ b/sightwise/src/app/composants/attraction-acceuil/attraction-acceuil.component.html
@@ -8,7 +8,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 offset-md-1">
-                           
+
                             <h1> Descendre et découvrir les meilleures attractions  </h1>
                             <h1></h1>
                             <div class="butn-light mt-30 mb-30"> <a href="#" data-scroll-nav="1"><span>Destinations & Services</span></a> </div>
@@ -39,7 +39,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="section-subtitle"> JAWLATY</div>
+                <div class="section-subtitle"> JasmineTrip</div>
                 <div class="section-title">Tous les  Attractions </div>
                 <input class="form-control border-3 mb-4 rounded-pill w-100 py-3 ps-4 pe-5" type="text"  [(ngModel)]="term"
                 placeholder="search">
@@ -52,7 +52,7 @@
         </div>
         <div class="tab-class text-center">
             <ul class="nav nav-pills d-inline-flex justify-content-center mb-5">
-                   
+
                      <li class="nav-item" *ngFor="let CAT of listCategory">
                          <a type="button" class="d-flex mx-3 py-2 border border-primary rounded-pill"
                              [ngClass]="{'selected': selectedcategory === CAT?.id}"
